fix: align grid in center

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0 16px 16px 16px;
+    justify-content: center;
 }
 
 .column {
